[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arknight-auto-editing"
version = "0.1.0"
description = "Arknight video cutting and preview tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10.0",
]

[project.scripts]
arknight-auto-editing = "main:main"

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0",
]

[tool.setuptools]
py-modules = [
    "analyzer",
    "frame_types",
    "main",
    "preview_player",
    "settings_panel",
    "timeline_widget",
    "video_io",
]
